Change log for zeit.web
=======================

1.63 (unreleased)
-----------------

- MAINT: Polish comments preferences and parquet topic links


1.62 (2015-09-02)
-----------------

- ZON-2053: Resort and collapse comment replies

- ZON-2062: Migrate video and sharinge images to new image server

- ZON-2080: Hide cp2015 ending in sharing data

- ZON-2002: Include cards from espi-be via esi

- ZON-1592: Label "Verlagsangebote"

- ZON-2064: Kommentarezahl Artikel oben

- FIX: Fix SASS mixin for rem values


1.61.1 (2015-08-27)
-------------------

- ZON-1591: Allow app-content mode for staging environment


1.61 (2015-08-27)
-----------------

- ZON-1591: Wrapper functionality for mobile apps

- MAINT: Polish square teaser, topic teaser, column byline and button

- ZON-2034: Bring back images for dynamic ranking areas

- ZON-2129: integrate former noindex rules from XSLT

- ZON-1968: Add Iframe 50/50 Teaser

- ZON-2058: Reposition comment recommendations

- ZON-2052: Enable DNS Prefetch for assets

- ZON-2050: Do not load hidden images

- ZON-2011: Use default style/template on column teaser and article
  if there is no author image

- FIX: iqd sitebar should not again be seen on mobile

- ZON-2079: extend schema.org for videos


1.60.0 (2015-08-24)
-------------------

- ZON-2116: Add javascript object for wrapper apps

- ZON-2076: Move h1 to teasertext of paginated articles,
  make teasertext page title if page is paginated

- ZON-2057: Character counter above the form field

- ZON-1943: Adapt classifieds: new xml values, make font taller,
  put ellipsis to mobile view

- ZON-1980: Show ads on news ticker page

- ZON-2055: Filter comments by recommendations and editorial promotions

- ZON-1939: Search page polishing

- ZON-2032: Correct canoncial for article, series, search and topic pages

- ZON-2081: Zweite Datumsangabe entfernen

- ZON-2078: Versteckte h3 entfernen

- ZON-2099: Kolumnen-Nextread

- FIX: Make Spiele in navigation visible again
